--- a/learn_Dung.html
+++ b/learn_Dung.html
@@ -136,7 +136,7 @@ window.history.back();
 
       <div id="actions" class="panel">
         <p id="create">Tạo mới</p>
-        <p class="execAction" id="sort" onClick="sortGeneric()">Sort</p>
+        <p class="execAction" id="sort" onClick="sortGeneric()">Sắp xếp</p>
       </div>
       <div id="actions-hide" class="panel-hide"><span
           style="color:white; font-size: x-large; display: inline-block;">&gt;</span></div>
