--- a/learn_Dung.html
+++ b/learn_Dung.html
@@ -146,7 +146,7 @@ window.history.back();
             N = <input id="user-arr-size" type="number" autocomplete="off" min="1" max="43" value="10"> </div>
           <div id="create-random" class="execAction new-menu-option coloured-menu-option"
             onClick="createList('random')">
-            <p>Random</p>
+            <p>Ngẫu nhiên</p>
           </div>
           <div id="create-sorted" class="execAction new-menu-option coloured-menu-option"
             onClick="toggleChildExtras('create', 'create-sorted')">
@@ -186,7 +186,7 @@ window.history.back();
               autocomplete="off" value="3,44,38,5,47,15,36,26,27,2,46,4,19,50,48"> </div>
           <div id="create-userdefined-go" class="execAction new-menu-option coloured-menu-option"
             onClick="createList('userdefined')">
-            <p>Go</p>
+            <p>Bắt đầu</p>
           </div>
           <div id="create-userdefined-input-cs" class="new-menu-option" style="display: none;">
             (base) k = <input id="counting-sort-base" type="number" autocomplete="off" min="2" max="16" value="10">
